# ops241

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  dev-requirements.txt  game.py  min.py  pyproject.toml  read.py  requirements.txt  setup.cfg  setup.py
ansible/: radar.yml
src/ops241/: .#cli.py  __init__.py  cli.py  messages.py  radar.py
